--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,9 +75,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: AbrilFatface
+    - family: PoetsenOne
       fonts:
-        - asset: assets/fonts/AbrilFatface-Regular.ttf
+        - asset: assets/fonts/PoetsenOne-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
